Fixed scrollbar and increased panel height to fit all buttons

--- a/src/content/panorama/styles/custom_game/cheats.css
+++ b/src/content/panorama/styles/custom_game/cheats.css
@@ -4,12 +4,6 @@
 	height: 100%;
 }
 
-#cheatsContainer
-{
-	width: 100%;
-	height: 100%;
-}
-
 #cheatsDisplay
 {
 	flow-children: down;
@@ -17,14 +11,13 @@
 	align: right top;
 	margin-top: 50px;
 	margin-right: -10px;
-	height: 770px;
+	height: 814px;
 	width: 200px;
 	border-radius: 5px;
 	transition-timing-function: ease-in-out;
 	transition-property: transform;
 	transition-duration: 0.3s;
 	visibility: visible;
-	overflow: clip scroll;
 }
 
 .cheatsDisplayHidden
@@ -48,6 +41,7 @@
 {
 	flow-children: down;
 	width: 100%;
+	overflow: clip scroll;
 }
 
 
